--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <div class="top">
-<p><b>Click here to open my <a href="resume.pdf" target="_blank">resume</a>.</b></p>
+<p><b>Click here to open my <a href="Resume.pdf" target="_blank">resume</a>.</b></p>
 </div>
 
 <div class="topcenter">
