--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Zach's Website! </title>
 <link href="styles.css" rel="stylesheet">
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
