--- a/index.html
+++ b/index.html
@@ -4,31 +4,42 @@
 <head>
   <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Zach's Website! </title>
 <link href="styles.css" rel="stylesheet">
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
-
-
 </head>
 
 <body>
-  <div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="contact.html" target="_self">Contact</a>
-  <a href="about.html">About</a>
+<nav role="navigation">
+  <div id="menuToggle">
+
+    <input type="checkbox" />
+
+    <span></span>
+    <span></span>
+    <span></span>
+
+    <ul id="menu">
+      <a href="index.html"><li>Home</li></a>
+      <a href="about.html"><li>About</li></a>
+      <a href="contact.html"><li>Contact</li></a>
+    </ul>
+  </div>
+</nav>
+
+<div >
+  <p class="middle"><b>Click here to open my <a href="resume.pdf" target="_blank">resume</a>.</b></p>
 </div>
+
 <div class="right">
 <a class="twitter-timeline" data-width="500" data-height="500" data-theme="light" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets - Curated tweets by TwitterDev</a>
 </div>
 
-<div class="top">
-<p><b>Click here to open my <a href="Resume.pdf" target="_blank">resume</a>.</b></p>
-</div>
+
 
 <div class="topcenter">
-<div class="pa-gallery-player-widget" style="width:100%; height:480px; display:none;"
+<div class="pa-gallery-player-widget" style="width:100%; height:510px; display:none;"
   data-link="https://photos.app.goo.gl/F56vdHQUSfLtjdhg7"
   data-title="About me "
   data-description="17 new photos added to shared album">
