--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,35 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <title> Contact </title>
 <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-  <div class="topnav">
-  <a href="index.html">Home</a>
-  <a class="active" href="contact.html">Contact</a>
-  <a href="about.html">About</a>
-  </div>
+  <nav role="navigation">
+    <div id="menuToggle">
+
+      <input type="checkbox" />
+
+      <span></span>
+      <span></span>
+      <span></span>
+
+      <ul id="menu">
+        <a href="index.html"><li>Home</li></a>
+        <a href="about.html"><li>About</li></a>
+        <a href="contact.html"><li>Contact</li></a>
+      </ul>
+    </div>
+  </nav>
+
+
 
 <div>
-<h1> Contact me! </h1>
+<h1 class="middle"> Contact me! </h1>
 <div class = "mail">
 <h4> Email address: <h4>
-<a href="mailto:"zjones1998@att.net">zjones1998@att.net</a>
+<a href=mailto:zjones1998@att.net>zjones1998@att.net</a>
 </div>
 
 <div class="phone">
