--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About</title>
-    <link href="/ZachsWebsite/css/styles.css" rel="stylesheet">
+    <link href="styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <nav role="navigation">
