--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 <title> Contact </title>
-<link href="styles.css" rel="stylesheet">
-</head>
+ <link href="styles.css" type="text/css" rel="stylesheet">
+ </head>
 
 <body>
   <nav role="navigation">
