--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
   <meta charset="utf-8">
 <title> Zach's Website! </title>
-<link href="styles.css" rel="stylesheet">
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<link href="styles.css" type="text/css" rel="stylesheet">
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
 </head>
 
