--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </nav>
 
 <div >
-  <p class="middle"><b>Click here to open my <a href="resume.pdf" target="_blank">resume</a>.</b></p>
+  <p class="middle"><b>Click here to open my <a href="Resume.pdf" target="_blank">resume</a>.</b></p>
 </div>
 
 <div class="right">
