--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
 <title> Zach's Website! </title>
 <link href="styles.css" type="text/css" rel="stylesheet">
