--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
     <link href="styles.css" type="text/css" rel="stylesheet">
   </head>
