--- a/index.html
+++ b/index.html
@@ -1,68 +1,132 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-<title> Zach's Website! </title>
-<link href="styles.css" type="text/css" rel="stylesheet">
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+  <title> Zach's Website! </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+
 </head>
 
 <body>
-<nav role="navigation">
-  <div id="menuToggle">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <div id="wrapper" class="wrapper-content">
+      <div id="sidebar-wrapper">
+          <ul class="sidebar-nav">
+              <li class="sidebar-brand">
+                  <a href="#">
+                      Bootdey.com
+                  </a>
+              </li>
+              <li>
+                  <a href="#">Dashboard</a>
+              </li>
+              <li>
+                  <a href="#">Shortcuts</a>
+              </li>
+              <li>
+                  <a href="#">Overview</a>
+              </li>
+              <li>
+                  <a href="#">Events</a>
+              </li>
+              <li class="active">
+                  <a href="#">About</a>
+              </li>
+              <li>
+                  <a href="#">Services</a>
+              </li>
+              <li>
+                  <a href="#">Contact</a>
+              </li>
+          </ul>
+      </div>
 
-    <input type="checkbox" />
+      <div id="page-content-wrapper">
+          <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                  <div class="navbar-header">
+                      <button class="btn-menu btn btn-success btn-toggle-menu" type="button">
+                          <i class="fa fa-bars"></i>
+                      </button>
+                  </div>
+                  <div class="collapse navbar-collapse">
+                      <ul class="nav navbar-nav navbar-right">
+                          <li>
+                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                  <i class="ti-panel"></i>
+          						<p>Stats</p>
+                              </a>
+                          </li>
+          				<li>
+                              <a href="#">
+          						<i class="ti-settings"></i>
+          						<p>Settings</p>
+                              </a>
+                          </li>
+                      </ul>
 
-    <span></span>
-    <span></span>
-    <span></span>
-
-    <ul id="menu">
-      <a href="index.html"><li>Home</li></a>
-      <a href="about.html"><li>About</li></a>
-      <a href="contact.html"><li>Contact</li></a>
-    </ul>
+                  </div>
+              </div>
+          </nav>
+          <div class="container-fluid">
+              <div class="row">
+                  <div class="col-lg-12">
+                      <h1>Sidebar Menu</h1>
+                      <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens,
+                      and will appear non-collapsed on larger screens.</p>
+                      <p>Make sure to keep your content here</p>
+                  </div>
+              </div>
+          </div>
+      </div>
   </div>
-</nav>
-
-<div >
-  <p class="middle"><b>Click here to open my <a href="/Resume.pdf" target="_blank">resume</a>.</b></p>
-</div>
-
-<div class="right">
-<a class="twitter-timeline" data-width="500" data-height="500" data-theme="light" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets - Curated tweets by TwitterDev</a>
-</div>
 
 
 
-<div class="topcenter">
-<div class="pa-gallery-player-widget" style="width:100%; height:510px; display:none;"
-  data-link="https://photos.app.goo.gl/F56vdHQUSfLtjdhg7"
-  data-title="About me "
-  data-description="17 new photos added to shared album">
-  <object data="https://lh3.googleusercontent.com/EjSAUlOUhZgQlcoz7r02BT1WDFHM1ILEN3rfTqzvGNwBDxe332z7rbHf08ih77QOJAvrogqup5a0DKHl7MbsMIWdjkrvBcH27rsgHsYa8xzrHBqfhpU9h2wpEHdNeofMOrcKeyRWhA=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/WAaWxwqK6A4WZAwIaGcEJwqbuy0KymqfWrT96sZgRndJU_kfoNI_6-Ac7pabQvVfmK0sFy_WdaNtIgrkbiZIe3aZE1z-Got1MsOiMD0NEXaNi778cSUULqiveVrxexH3UvGkOOEaNA=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/PD-wmG4ydx6hc7CCO0FxmvS66vHaEMjK3p7P_FIfmpzVDpzhTgJoqYEFCLEr-uTwCyGAi8jutdgpBRiSQOeMIgg0NQ3kka_07YcgUOtucFiaLOGaQ7A9kpqQqih9x6VpJz7_BwPdog=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/Qoi5J5LllFPMb62g8o9tcvuVnXxna1B6S6iaLnarO2BUhkEk13pBA1yOGyoZtdNgj4EiT00d0J63yxU3H_eLmoDblGNSFLOAp7kmPJzRjY7AsKFdAOosA3cwcO1IMaK_gE4lHv5N5Q=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/mVXXiJS_BEstM4jcbx3sPy8HW6XLxIvu4XVMiW58b7QRXUD0TnTNxzrktEvHs4JgibcQYONJk-gHehcB0VkOq81rrel571UXeEtr0dwFjEWhEfZYHfpI4xc1FT2uedm1gDOp1gPbFw=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/XGajfLFTK_jE9N0xFvML0UZhopOkcppJPe_GibdGTsfxA-uJzCjh0H3291isIuTRs89pJpLyMsUuNPCjVfO9Tc8oTM69k-i7isCdcC5b6M9Xhj-kzR7Ua9ZGspuGgJG-Ogg8IFOMbw=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/nU1oXVJvZXwtAS-NLQWrEIvawnXMu0tXffiLLlvumVo6lgs0keIShw27GDyconydDCxXMth4VrkVhRBeJL8EOOboL394foK6uhbvonQk8TcTS5_TcO2a3_7aTexm8YVDaVZPvgJyUQ=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/jCrp5_CshN9PEl78ESApxf2ftQqzdgv2_MKQQhDkkCXhxfA--fERt4t6Gv0TD8OVWn_TP_p5zHAO0UfNxdrM1iG7wq85s4PzBqKrrRhFxiqLf96sBWwigu9_0Nr2HMGdFek2wPvzkw=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/O6SAdevya1IuuimxfZAB_o2vgS5smYOxhQiwHF7c4dVxoeDaKCUeTWYpe3lvHwAUvALUv3hjJj_WRbbWxFasQwIbzvGb3r48yFV7tx9g8FWWEPlCl-BgjF7QgfglipGqaooGYWF0mA=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/vUXyY7UohJAluu2q_DrEFABPhnarWOxKXAuGUgoyOTe54s6yISTBasj6iK7j3E5en1iasXbNc19G_csqMa60JlBKSmRFKqrscXMEbRns0LEUSDyo_y57Cdhrnou5MGpWy-lQa_GgXw=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/5WwingaR-WeWI7OzSrE5sa28_yxGG8RtumrLLtpJPXzNCFUeEVeY1gMExmLYN0JlQQqQVdA490hpTsDbGVNhS5Co_XxnK5nODLJhtGYTd-qPczbiiaiw8QDwUkz65KavqkVX9_zQkQ=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/eg5Ehrp5yS1lh4Jb-WE-BBnVV7cgHXGn82tvegzhb7Fp7-Ceha4vSWiQrAa8rXHpiKU3h2rGTzCRO1_uEIAd4_wDWhzl5WfDSH381raNxd1w3cGEjpwt4jsJmEojIxvnWbN3x8unlg=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/563RFNQcoSnaPkeaipo_Kb6OZIbtycFMVDOoSE1eLb_XzkLpqDwF6Qy4NdjS7gHXViN8mYGs25AylNw9KCHq6Aw-dIEK8DgZeEgw51PBvJ63SIYq7y5yvVC-hlT9STPP6Zy4D0JQZw=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/XPihOBgIj1Vm9NaP7s1TD1QaOMvfS6V1FKiXk2swIsAQNRUYMxZuYbM09qidmMsTRiqD_w9KwflOweM7cyteP812WbPpLEoMhLlUJadHhXi7uuYMLEllpTaF1HnNghJ3roYl_38TEA=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/1yBCZD4KZPSxBaZ4S6MkaDY3aIdW_9MFk7d-2O0GoLc3fJIlWRR6tL3V_vJtSBoWcdJ_L8bf9F_stdw5l_RefD4NpUySkFCdVXuUT9jLpM6HHtdVtcf5Zn7NIM7bzmoaB08x74lbcg=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/21VD6FakpCqGu3Z6M4yHKHD-f0GrqMGqHj3NrSwUEtCVX7qWRt9-h6JUw4aFgPRPGiBr1xix26S0yBKZIZzdRsyMtFehT7S_mfNtgwmCNWkKPDiSbWBWlEzuIB63PsmjwzgmXwJTNg=w640-h800"></object>
-  <object data="https://lh3.googleusercontent.com/8nbMjpYj1HBTYteoQzgXD1LGKrjXVMhoYk9sLxYgEXUZ3g-RYwzVLhprd804-F3LRCAHg-g2UBFZFdylqKV32HwH397ScN4RS_q6q3pA2-ffHvUoCMG0eAy_nEQLKLQEEtbda1027A=w640-h800"></object>
-</div>
-</div>
+  <div class="container py-5">
+    <div class="row text-center">
+      <!-- Team item-->
+      <div class="col-xl-3 col-sm-6 mb-5">
+        <div class="bg-white rounded shadow-sm py-5 px-4">
+          <h5 class="className">Embedded Systems</h5>
+          <ul class="social mb-0 list-inline mt-3">
+            <p class="classList"> Built a pool controller by using microprocessors and an external web application build from scratch.</p>
+          </ul>
+        </div>
+      </div>
+      <!-- End-->
+
+      <!-- Team item-->
+      <div class="col-xl-3 col-sm-6 mb-5">
+        <div class="bg-white rounded shadow-sm py-5 px-4">
+          <h5 class="className">Object Oriented Programming</h5>
+          <ul class="social mb-0 list-inline mt-3">
+            <p class="classList"> Made a Point Of Sales that communicated with a MySQL server.</p>
+          </ul>
+        </div>
+      </div>
+      <!-- End-->
+
+      <!-- Team item-->
+      <div class="col-xl-3 col-sm-6 mb-5">
+        <div class="bg-white rounded shadow-sm py-5 px-4">
+          <h5 class="className">Systems Design</h5>
+          <ul class="social mb-0 list-inline mt-3">
+            <p class="classList">Utilized Apple Wallet technology to dynamically create passes from http requests and stored said passes in a Mac Mini database. </p>
+          </ul>
+        </div>
+      </div>
+      <!-- End-->
+    </div>
+  </div>
+
 </body>
 
 </html>
+
