--- a/index.html
+++ b/index.html
@@ -7,43 +7,28 @@
   <meta charset="utf-8">
   <title> Zach's Website! </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="script.js"></script>
+
 </head>
 
 <body>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <div id="wrapper" class="wrapper-content">
       <div id="sidebar-wrapper">
           <ul class="sidebar-nav">
               <li class="sidebar-brand">
-                  <a href="#">
-                      Bootdey.com
-                  </a>
-              </li>
-              <li>
-                  <a href="#">Dashboard</a>
-              </li>
-              <li>
-                  <a href="#">Shortcuts</a>
-              </li>
-              <li>
-                  <a href="#">Overview</a>
-              </li>
-              <li>
-                  <a href="#">Events</a>
+                <h2> Home Page </h2>
               </li>
               <li class="active">
-                  <a href="#">About</a>
+                  <a href="#">Home</a>
               </li>
               <li>
-                  <a href="#">Services</a>
+                  <a href="about.html">About</a>
               </li>
+
               <li>
-                  <a href="#">Contact</a>
+                  <a href="contact.html">Contact</a>
               </li>
           </ul>
       </div>
@@ -56,44 +41,24 @@
                           <i class="fa fa-bars"></i>
                       </button>
                   </div>
-                  <div class="collapse navbar-collapse">
-                      <ul class="nav navbar-nav navbar-right">
-                          <li>
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                  <i class="ti-panel"></i>
-          						<p>Stats</p>
-                              </a>
-                          </li>
-          				<li>
-                              <a href="#">
-          						<i class="ti-settings"></i>
-          						<p>Settings</p>
-                              </a>
-                          </li>
-                      </ul>
 
-                  </div>
               </div>
           </nav>
           <div class="container-fluid">
               <div class="row">
                   <div class="col-lg-12">
-                      <h1>Sidebar Menu</h1>
-                      <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens,
-                      and will appear non-collapsed on larger screens.</p>
-                      <p>Make sure to keep your content here</p>
+
                   </div>
               </div>
           </div>
       </div>
   </div>
 
-
-
-  <div class="container py-5">
+<div class="container card-deck mb-4 text-center">
+  <div class="d-flex align-items-center justify-content-center" style="height: 350px">
     <div class="row text-center">
       <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
+      <div class="col-xl-3 col-sm-6 mb-4">
         <div class="bg-white rounded shadow-sm py-5 px-4">
           <h5 class="className">Embedded Systems</h5>
           <ul class="social mb-0 list-inline mt-3">
@@ -125,9 +90,10 @@
       </div>
       <!-- End-->
     </div>
-  </div>
+</div>
+</div>
 
 </body>
+<script src="script.js"></script>
 
 </html>
-
