--- a/contact.html
+++ b/contact.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
+  <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> Contact </title>
- <link href="styles.css" type="text/css" rel="stylesheet">
- </head>
+  <title> Zach's Website! </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</head>
 
 <body>
-  <nav role="navigation">
-    <div id="menuToggle">
 
-      <input type="checkbox" />
 
-      <span></span>
-      <span></span>
-      <span></span>
+  <div id="wrapper" class="wrapper-content">
+      <div id="sidebar-wrapper">
+          <ul class="sidebar-nav">
+              <li class="sidebar-brand">
+                <h2> Contact </h2>
+              </li>
+              <li >
+                  <a href="index.html">Home</a>
+              </li>
+              <li>
+                  <a href="about.html">About</a>
+              </li>
 
-      <ul id="menu">
-        <a href="index.html"><li>Home</li></a>
-        <a href="about.html"><li>About</li></a>
-        <a href="contact.html"><li>Contact</li></a>
-      </ul>
+              <li class="active">
+                  <a href="contact.html">Contact</a>
+              </li>
+          </ul>
+      </div>
+
+      <div id="page-content-wrapper">
+          <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                  <div class="navbar-header">
+                      <button class="btn-menu btn btn-success btn-toggle-menu" type="button">
+                          <i class="fa fa-bars"></i>
+                      </button>
+                  </div>
+              </div>
+          </nav>
+          <div class="container-fluid">
+              <div class="row">
+                  <div class="col-lg-12">
+
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+    <div class="row">
+      <div class="col-md-4">Email address:
+        <a href=mailto:zjones1998@att.net>zjones1998@att.net</a>
+      </div>
+      <div class="col-md-4">Phone Number:
+      405-426-0046</div>
+      <div class="col-md-4"> My Social Media
+      <ul class="social mb-0 list-inline mt-3">
+          <li class="list-inline-item"><a href="https://www.facebook.com/zach.jones.71271" class="social-link" target="_blank"><i class="fa fa-facebook-f"></i></a></li>
+          <li class="list-inline-item"><a href="https://www.instagram.com/zjones1998/" class="social-link" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li class="list-inline-item"><a href="https://www.linkedin.com/in/zach-jones-106b99186/" class="social-link" target="_blank" ><i class="fa fa-linkedin"></i></a></li>
+        </ul>
+      </div>
     </div>
-  </nav>
 
 
-
-<div>
-<h1 class="middle"> Contact me! </h1>
-<div class = "mail">
-<h4> Email address: <h4>
-<a href=mailto:zjones1998@att.net>zjones1998@att.net</a>
-</div>
-
-<div class="phone">
-<h4> Phone number: <h4>
-<p> 405-426-0046</p>
-</div>
-
-</div>
 </body>
+<script src="script.js"></script>
+</html>
