--- a/about.html
+++ b/about.html
@@ -1,48 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
-    <link href="styles.css" type="text/css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <nav role="navigation">
-      <div id="menuToggle">
 
-        <input type="checkbox" />
+<head>
+  <meta name="google-site-verification" content="8gBS4-LnovhSlV7JmTPku9j6oAdInxJAg2jXG7aIjzg" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title> Zach's Website! </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-        <span></span>
-        <span></span>
-        <span></span>
+</head>
 
-        <ul id="menu">
-          <a href="index.html"><li>Home</li></a>
-          <a href="about.html"><li>About</li></a>
-          <a href="contact.html"><li>Contact</li></a>
-        </ul>
+<body>
+  <div id="wrapper" class="wrapper-content">
+      <div id="sidebar-wrapper">
+          <ul class="sidebar-nav">
+              <li class="sidebar-brand">
+                <h2> About Me </h2>
+              </li>
+              <li >
+                  <a href="index.html">Home</a>
+              </li>
+              <li class="active">
+                  <a href="about.html">About</a>
+              </li>
+
+              <li>
+                  <a href="contact.html">Contact</a>
+              </li>
+          </ul>
       </div>
-    </nav>
 
-    <div>
-    <h1 class="middle"> About me! </h1>
-    </div>
+      <div id="page-content-wrapper">
+          <nav class="navbar navbar-default">
+              <div class="container-fluid">
+                  <div class="navbar-header">
+                      <button class="btn-menu btn btn-success btn-toggle-menu" type="button">
+                          <i class="fa fa-bars"></i>
+                      </button>
+                  </div>
 
-    <div class="container">
-      <img src="intro_image.jpg" alt="Avatar" class="image" style="width:100%">
-    </div>
+              </div>
+          </nav>
+          <div class="container-fluid">
+              <div class="row">
+                  <div class="col-lg-12">
 
-    <div class="center">
-      <h2> Who am I? </h2>
-      <p> This is me. I am currently attending Oklahoma Christian University.
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+  <div class="container">
+    <img src="intro_image.jpg" alt="Avatar" class="image" style="width:100%">
+  </div>
+
+  <div class="center">
+    <h2> Who am I? </h2>
+    <p> This is me. I am currently attending Oklahoma Christian University.
       I'm studying computer engineering with an emphasis in software.
       I like to participate at church events and the college group.
       I attend Memorial Road Church of Christ.
       I like rock climbing and playing my guitar.
       Every saturday we always sit and watch Alabama football
       together.
-      </p>
-    </div>
-  </body>
+    </p>
+  </div>
+
+</body>
+<script src="script.js"></script>
+
 </html>
