--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   <figure class="snip1321">
                     <img
                       src="images/bush.jpg"
-                      alt="sq-sample26"
+                      alt="bush"
                     />
                     <figcaption>
                       <a
@@ -313,7 +313,7 @@
                   <figure class="snip1321">
                     <img
                       src="images/jamaicabeach.jpg"
-                      alt="sq-sample26"
+                      alt="beach"
                     />
                     <figcaption>
                       <a
@@ -359,9 +359,10 @@
             <h2>Contact Me</h2>
             <br/>
               <fieldset>
-                <button type="submit" id="form-submit" class="button">
-                  <a href = "mailto:zjones1998@att.net">Send Email</a>
+                <button type="submit" id="form-submit" class="button" onclick="email">
+                  <a href = "mailto:zjones1998@att.net" id="email">Send Email</a>
                 </button>
+
               </fieldset>
 
           </div>
