--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                   <figure class="snip1321">
                     <img
                       src="images/football game.jpg"
-                      alt="sq-sample26"
+                      alt="Football"
                     />
                     <figcaption>
                       <a
@@ -293,12 +293,12 @@
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="images/bush.jpg"
+                      src="images/bush.JPG"
                       alt="bush"
                     />
                     <figcaption>
                       <a
-                        href="images/bush.jpg"
+                        href="images/bush.JPG"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -312,12 +312,12 @@
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
                     <img
-                      src="images/jamaicabeach.jpg"
+                      src="images/jamaicaBeach.jpg"
                       alt="beach"
                     />
                     <figcaption>
                       <a
-                        href="images/jamaicabeach.jpg"
+                        href="images/jamaicaBeach.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
