--- a/index.html
+++ b/index.html
@@ -273,10 +273,12 @@
               <div class="isotope-box">
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
+                    <picture>
                     <img
                       src="images/football game.jpg"
                       alt="sq-sample26"
                     />
+                    </picture>
                     <figcaption>
                       <a
                         href="images/football game.jpg"
@@ -292,10 +294,12 @@
 
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
+                    <picture>
                     <img
                       src="images/bush.jpg"
                       alt="bush"
                     />
+                    </picture>
                     <figcaption>
                       <a
                         href="images/bush.jpg"
@@ -311,10 +315,12 @@
 
                 <div class="isotope-item" data-type="nature">
                   <figure class="snip1321">
+                    <picture>
                     <img
                       src="images/jamaicabeach.jpg"
                       alt="beach"
                     />
+                    </picture>
                     <figcaption>
                       <a
                         href="images/jamaicabeach.jpg"
@@ -330,10 +336,12 @@
 
                 <div class="isotope-item" data-type="people">
                   <figure class="snip1321">
+                    <picture>
                     <img
                       src="images/mobilID.jpg"
                       alt="sq-sample26"
                     />
+                    </picture>
                     <figcaption>
                       <a
                         href="images/mobilID.jpg"
