--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
                     <img
                       src="images/bush.jpg"
                       alt="bush"
+                      style="width:auto;
                     />
                   </picture>
                     <figcaption>
@@ -317,6 +318,7 @@
                     <img
                       src="images/jamaicabeach.jpg"
                       alt="beach"
+                      style="width:auto;
                     />
                   </picture>
                     <figcaption>
@@ -337,6 +339,7 @@
                     <img
                       src="images/mobilID.jpg"
                       alt="sq-sample26"
+                      style="width:auto;
                     />
                     <figcaption>
                       <a
