--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                   </picture>
                     <figcaption>
                       <a
-                        href="images/bush.jpg"
+                        href="images/bush.JPG"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -323,7 +323,7 @@
                   </picture>
                     <figcaption>
                       <a
-                        href="images/jamaicabeach.jpg"
+                        href="images/jamaicaBeach.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
